fixed overflowing text

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,7 +14,7 @@ footer {
 
 @media (min-width: 1025px) {
   .upper-footer {
-    width: 60%;
+    width: 75%;
   }
 }
 .footer-content {
